kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestdebugger
  namespace: requestdebugger
  labels:
    app.kubernetes.io/name: requestdebugger
    app.kubernetes.io/component: debugger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: requestdebugger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: requestdebugger
        app.kubernetes.io/component: debugger
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: requestdebugger
          image: masteralt/requestdebugger:latest
          imagePullPolicy: IfNotPresent
          command:
            - /app/main
          args:
            - -log-level
            - debug
            - -log-format
            - text
          ports:
            - name: http
              containerPort: 5464
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
