kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestdebugger-nodeport
  namespace: requestdebugger
  labels:
    app.kubernetes.io/name: requestdebugger
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: requestdebugger
  ports:
    - name: http
      port: 5464
      targetPort: http
      nodePort: 30464
      protocol: TCP
