kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestdebugger
  namespace: requestdebugger
  labels:
    app.kubernetes.io/name: requestdebugger
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: requestdebugger
  ports:
    - name: http
      port: 5464
      targetPort: http
      protocol: TCP
